--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>React App</title>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=23e11a0233eae4e4af2d9ee2489b20be"></script>
+  <style>
+    .defaults {
+      position: absolute;
+      top: -999999px;
+    }
+
+    .mask {
+      width: 100%;
+      height: 100vh;
+      background: #111;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 5;
+      opacity: 1;
+      transition: opacity 2s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font: 20px/1 'arial';
+      color: #fff;
+    }
+  </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <div class="defaults">
-    <div class="mask"></div>
+    <div class="mask">Loading...</div>
   </div>
 
   <script>
